; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ixl/extr_i40e_common.c_i40e_led_get_reg.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ixl/extr_i40e_common.c_i40e_led_get_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i40e_hw = type { i32, i32 }

@I40E_HW_FLAG_AQ_PHY_ACCESS_CAPABLE = common dso_local global i32 0, align 4
@I40E_AQ_PHY_REG_ACCESS_EXTERNAL = common dso_local global i32 0, align 4
@I40E_PHY_COM_REG_PAGE = common dso_local global i32 0, align 4
@I40E_PHY_LED_PROV_REG_1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.i40e_hw*, i32, i64*)* @i40e_led_get_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i40e_led_get_reg(%struct.i40e_hw* %0, i32 %1, i64* %2) #0 {
  %4 = alloca %struct.i40e_hw*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.i40e_hw* %0, %struct.i40e_hw** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64* %2, i64** %6, align 8
  store i32 0, i32* %8, align 4
  %9 = load i64*, i64** %6, align 8
  store i64 0, i64* %9, align 8
  %10 = load %struct.i40e_hw*, %struct.i40e_hw** %4, align 8
  %11 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @I40E_HW_FLAG_AQ_PHY_ACCESS_CAPABLE, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %23

16:                                               ; preds = %3
  %17 = load %struct.i40e_hw*, %struct.i40e_hw** %4, align 8
  %18 = load i32, i32* @I40E_AQ_PHY_REG_ACCESS_EXTERNAL, align 4
  %19 = load i32, i32* @I40E_PHY_COM_REG_PAGE, align 4
  %20 = load i32, i32* @I40E_PHY_LED_PROV_REG_1, align 4
  %21 = load i64*, i64** %6, align 8
  %22 = call i32 @i40e_aq_get_phy_register(%struct.i40e_hw* %17, i32 %18, i32 %19, i32 %20, i64* %21, i32* null)
  store i32 %22, i32* %7, align 4
  br label %36

23:                                               ; preds = %3
  %24 = load %struct.i40e_hw*, %struct.i40e_hw** %4, align 8
  %25 = load %struct.i40e_hw*, %struct.i40e_hw** %4, align 8
  %26 = getelementptr inbounds %struct.i40e_hw, %struct.i40e_hw* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @i40e_get_phy_address(%struct.i40e_hw* %24, i32 %27)
  store i32 %28, i32* %8, align 4
  %29 = load %struct.i40e_hw*, %struct.i40e_hw** %4, align 8
  %30 = load i32, i32* @I40E_PHY_COM_REG_PAGE, align 4
  %31 = load i32, i32* %5, align 4
  %32 = load i32, i32* %8, align 4
  %33 = load i64*, i64** %6, align 8
  %34 = bitcast i64* %33 to i32*
  %35 = call i32 @i40e_read_phy_register_clause45(%struct.i40e_hw* %29, i32 %30, i32 %31, i32 %32, i32* %34)
  store i32 %35, i32* %7, align 4
  br label %36

36:                                               ; preds = %23, %16
  %37 = load i32, i32* %7, align 4
  ret i32 %37
}

declare dso_local i32 @i40e_aq_get_phy_register(%struct.i40e_hw*, i32, i32, i32, i64*, i32*) #1

declare dso_local i32 @i40e_get_phy_address(%struct.i40e_hw*, i32) #1

declare dso_local i32 @i40e_read_phy_register_clause45(%struct.i40e_hw*, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
